bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__read.snap
---
source: bloodhound/src/deserializer.rs
expression: to_json(& event)
---
{
  "args": {
    "fd": 3,
    "fd_type": "other",
    "requested_size": 7
  },
  "event": {
    "layer": "behavior",
    "name": "read",
    "type": "TRACEPOINT"
  },
  "header": {
    "auid": 1000,
    "comm": "python3",
    "pid": 2921,
    "process_ref": {
      "start_boottime_ns": 773841663980,
      "tgid": 2921
    },
    "sessionid": 184,
    "timestamp": 773866917960
  },
  "return_code": 0
}
