bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__tty_read.snap
---
source: bloodhound/src/deserializer.rs
expression: to_json(& event)
---
{
  "args": {
    "data": "QkhfVFRZX1JFQURfR09MREVOCg=="
  },
  "event": {
    "layer": "intent",
    "name": "tty_read",
    "type": "TTY"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5552,
    "process_ref": {
      "start_boottime_ns": 1020363497440,
      "tgid": 5552
    },
    "sessionid": 367,
    "timestamp": 1020364559632
  }
}
