bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__tty_write.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1377
expression: to_json(&event)
---
{
  "args": {
    "data": "ZWNobyBoZWxsbw0K"
  },
  "event": {
    "layer": "intent",
    "name": "tty_write",
    "type": "TTY"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709000000000
  }
}
